--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "typer>=0.12.3",
     "uvicorn==0.29.0",
     "wordcloud==1.9.3",
+    "pyyaml>=6.0",
 ]
 
 [[tool.uv.index]]
