--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,27 @@
-httpx==0.28.1
-Pillow==9.5.0
-playwright==1.45.0
-tenacity==8.2.2
-typer>=0.12.3
-opencv-python
+aiofiles==23.2.1
 aiomysql==0.2.0
-redis~=4.6.0
-pydantic==2.5.2
-aiofiles~=23.2.1
-fastapi==0.110.2
-uvicorn==0.29.0
-python-dotenv==1.0.1
-jieba==0.42.1
-wordcloud==1.9.3
-matplotlib==3.9.0
-requests==2.32.3
-parsel==1.9.1
-pyexecjs==1.5.1
-pandas==2.2.3
 aiosqlite==0.21.0
+alembic==1.16.5
+asyncmy==0.2.10
+cryptography==45.0.7
+fastapi==0.110.2
+httpx==0.28.1
+jieba==0.42.1
+matplotlib==3.9.0
+opencv-python==4.11.0.86
+pandas==2.2.3
+parsel==1.9.1
+pillow==9.5.0
+playwright==1.45.0
+pydantic==2.5.2
+pyexecjs==1.5.1
 pyhumps==3.8.0
-cryptography>=45.0.7
-alembic>=1.16.5
-asyncmy>=0.2.10
-sqlalchemy>=2.0.43
+python-dotenv==1.0.1
+pyyaml==6.0.3
+redis==4.6.0
+requests==2.32.3
+sqlalchemy==2.0.43
+tenacity==8.2.2
+typer==0.19.2
+uvicorn==0.29.0
+wordcloud==1.9.3
